--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar fixed-top navbar-expand-md navbar-dark ms_bg_nav">
             <div class="container-md">
 
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#">START BOOTSTRAP</a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,26 +24,15 @@
 
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                  </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active" aria-current="page" href="#">CONTACT</a>
+                    </li>
                 </ul>
                 
               </div>
@@ -139,8 +128,8 @@
                         </div>
 
                         <div class="row justify-content-center">
-                            <div class="col-2 text-center">
-                                <button type="button" class="btn btn-success">Success</button>
+                            <div class="col-3 text-center">
+                                <button type="button" class="btn ms_btn text-white"><i class="bi bi-download"></i> Download</button>
                             </div>
                         </div>
                     </div>
@@ -152,7 +141,7 @@
         </section>
 
         <section id="contact">
-            <div class="container-fluid text-center p-5">
+            <div class="container-fluid p-5">
                 <h2>Contact Me</h2>
                 <div class="row">
                     <div class="col-8 mx-auto">
@@ -170,7 +159,7 @@
                                 <textarea class="form-control border-top-0 border-start-0 border-end-0" placeholder="Message" id="exampleFormControlTextarea1" rows="6"></textarea>
                             </div>
                             
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn ms_btn text-white">Send</button>
                           </form>
                 </div>
             </div>
@@ -185,20 +174,23 @@
             <div class="container p-5 text-white">
                 <div class="row text-center">
                     <div class="col-12 col-lg-4">
-                        LOCATION
+                        <h6>LOCATION</h6>
+                        <p class="fs-5">2215 John Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="col-12 col-lg-4 mb-3">
+                        <h6>AROUND THE WEB</h6>
+                        <span><i class="bi bi-facebook ms_circle"></i><i class="bi bi-google ms_circle"></i><i class="bi bi-twitter ms_circle"></i><i class="bi bi-linkedin ms_circle"></i></span>
                     </div>
                     <div class="col-12 col-lg-4">
-                        AROUND THE WEB
-                    </div>
-                    <div class="col-12 col-lg-4">
-                        ABOUT FREELANCER
+                        <h6>ABOUT FREELANCER</h6>
+                        <p class="fs-5">Freelancer is a free to use, open source Bootstrap theme created by <span class="ms_text_green">Start Bootstrap</span>.</p>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="ms_bg_nav text-center p-5 text-white">
-            <p>Copyright</p>
+            <p>Copyright your website 2019</p>
         </div>
     </footer>
 
